[package]
name = "bevy_doryen"
version = "0.2.0"
authors = ["Alexander Krivács Schrøder <alexschrod@gmail.com>"]
description = "A Bevy plugin that integrates the Doryen roguelike library with Bevy"
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/alexschrod/bevy_doryen"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy
bevy_app = { version = "0.5" }
bevy_ecs = { version = "0.5" }
# doryen
doryen-rs = "1.2.3"

[dev-dependencies]
unicode-segmentation = "1.7"

[patch.crates-io]
# TODO: Remove these once https://github.com/bevyengine/bevy/pull/1859 is accepted
bevy_app = { git = "https://github.com/alexschrod/bevy", branch = "state_full_search" }
bevy_ecs = { git = "https://github.com/alexschrod/bevy", branch = "state_full_search" }
